# fiber-tactile-calibration-sim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
config/: experiment.yaml
docs/: lit_review.md  roadmap.md  workpackage_mapping.md
figures/: results.json
firmware/: README.md
firmware/fsr_rig/: fsr_rig.ino
scripts/: run_active_learning.py  run_analysis.py  run_experiment.py
src/fibercal/: __init__.py  active_learning.py  config.py  contact.py  hal.py  logger.py  metrics.py  ml.py  rosmimic.py  schema.py  sensor_model.py  sweeps.py  viz.py
tests/: conftest.py  test_pipeline.py
